--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&display=swap');
 
+/* *{border: 1px solid red;} */
 
 .inter{
   font-family: "Inter", sans-serif;
@@ -18,6 +19,12 @@
   
   
 /* shared style */
+.container{
+    max-width: 1440px;
+    width: 100%;
+    margin: 0 auto;
+    /* background-color: blue; */
+}
 .orange{
     color:rgba(230, 83, 60, 1) ;
 }
@@ -42,16 +49,21 @@
 /* nav{
     border: 1px solid blue;
 } */
+ #menu-icon{
+    display: none;
+ }
+ .fit-nav{
+    display: flex;
+    justify-content: space-between;
+ }
 .fitness{
     font-size: 2.25rem;
-    font-weight: 800;
-    margin-left: 185px;
-}
-.nav-div1{
-    width: 1060px;
+    font-weight: 800;}
+/* .nav-div1{
+
     height: 46px;
     border: 1px solid white;
-}
+} */
 .nav-items{
     list-style: none;
     margin-right: 3rem;
@@ -88,25 +100,28 @@ nav ul{
 }
 
 /* get-body in shape portion */
+.btn-display-flex{
+    display: flex;
+    gap: 10px;
+
+}
+
 .get-body{
     font-size: 4.875rem;
     font-weight: 900;
     margin-top: 0px;
-    margin-right: -50px;
 
 }
 .section-body{
-    /* justify-content: space-around; */
+    display: flex;
+    justify-content: space-around;
+   
 }
 .body-box{
-    height: 440px;
-    width: 599px;
-    border: 1px solid blue;
-    margin-top: 96px;
-    margin-left: 190px !important;
+    /* border: 1px solid red; */
+    max-width: 490px;
 }
 .body-p{
-    margin-top: -50px;
     font-size: 1rem;
     color: rgba(255, 255, 255, 0.5);
 
@@ -126,7 +141,7 @@ nav ul{
 }
 .button-left{
     height: 54px;
-    width: 462px;
+    /* width: 462px; */
 }
 .circle{
     height: 40px;
@@ -141,8 +156,11 @@ nav ul{
     width: 206px;
     align-items: center;
     border-radius: 12px;
-    margin-top: -165px;
-    margin-left: 35px;
+    position: relative;
+    bottom: 150px;
+    /* right: 10px; */
+    left: 10px;
+    
     background-color:rgba(48, 48, 48, 0.54) ;
     backdrop-filter: blur(30px)
     
@@ -151,11 +169,12 @@ nav ul{
 .TP2{
     height: 96px;
     width: 206px;
+    position: relative;
+    bottom: 600px;
+    left: 200px;
     align-items: center;
     background-color: rgba(48, 48, 48, 0.5);
     border-radius: 12px;
-    margin-left: 390px;
-    margin-top: -400px;
     backdrop-filter: blur(30px)
 }
 .text1{
@@ -163,6 +182,7 @@ nav ul{
 }
 .text1-1{
    margin-top: -15px;
+   color: rgba(255, 255, 255, 0.65);
 
 }
 .text2{
@@ -177,31 +197,25 @@ nav ul{
     margin-top: -35px;
 }
 .trainer1{
- margin-left: 150px;
- position: relative;
-    
+ position: relative;  
 }
+
 /* Change your habit style */
+.cyh{ 
+    margin-top: -200px;
+    /* height: 452px; */
+    /* border: 1px solid red;  */
+}
 .para{
     height: 120px;
     width: 671px;
-    border: 1px solid blue;
+    /* border: 1px solid red; */
     text-align: center;
     margin: 0 auto;
-
-
-}
-.cyh{
-    width: 1044px;
-    height: 452px;
-    border: 1px solid blue;
-    margin: 0 auto;
-    margin-top: 100px;
 }
 .habit{
     font-size: 3rem;
     font-weight: 900;
-    margin-top: -1px;
 }
 .small-para{
     font-size: 0.875rem;
@@ -213,28 +227,39 @@ nav ul{
 }
 .images4{
     margin-top: 58px;
-    margin-left: 60px;
-    justify-content: space-between;
-      
+    display: flex;
+   justify-content: space-around;
+   margin-top: -0px;
+   /* border: 1px solid blue; */
+  
+     
 }
 .image-circle{
     border-radius: 50%;
+    margin-left: 20px;
+    
 }
 .cyh-h3{
     font-weight: 600;
     font-size: 1.125rem;
     text-align: center;
-    margin-left: -69px;
+    /* margin-left: -69px; */
 }
 .cyh-p{
     font-weight: 400;
     font-size: 0.8rem;
     color: rgba(255, 255, 255, 0.5);
     text-align: center;
-    margin-right: 69px;
+    padding: 0px;
     margin-top: -10px;
+    width: 231px;
+    /* border: 1px solid green; */
 }
-/* Run an extra mile easily portion */
+
+/* Run an Extra mile */
+/* .h1-p{
+    margin-left: -54px;
+} */
 .run{
     font-weight: 900;
     font: 3rem;
@@ -244,25 +269,22 @@ nav ul{
     font-weight: 400;
     font-size: 0.875rem;
     color:rgba(255, 255, 255, 0.5);
+    width: 400px;
 }
 .rme{
-   border: 1px solid blue;
-   width: 1060px;
-   height: 371px;
-   margin: 0 auto;
-   margin-top: 100px;
-   align-items: center;
-   justify-content: space-around;
-   background-color: rgb(44, 43, 43);
-   border-radius: 18px;
-}
-#btn-join-now{
-    margin-top:10px;
-}
-.runner{
+    /* border: 1px solid red; */
+    height: 371px;
+    margin: 0 auto;
+    margin-top: 100px;
+    align-items: center;
+    justify-content: space-around;
+    background-color: rgb(44, 43, 43);
+    border-radius: 18px;
+ }
+ .runner{
     height: 312px;
     width: 371px;
-    border: 1px solid blue;
+    /* border: 1px solid red; */
     margin-right: -50px;
     /* object-fit: cover; */
     object-position: 10px 10%;
@@ -277,13 +299,15 @@ nav ul{
     border-radius: 18px;
     transform: scale(2.5) translate(-50px, 12%);
     
-   
-   
-}
-.h1-p{
-    margin-left: -54px;
 }
 /* BMI Calculator portion */
+.bmi-text-body{
+    margin: 0 auto;
+    max-width: 640px;
+    height: 120px;
+    /* border: 1px solid red; */
+    margin-top: 100px;
+}
 .bmi{
     font-size: 3rem;
     font-weight: 900;
@@ -296,14 +320,9 @@ nav ul{
     font-weight: 400;
     margin-top: -40pxpx;
 }
-.bmi-text-body{
-    margin: 0 auto;
-    width: 640px;
-    height: 120px;
-    border: 1px solid blue;
-    margin-top: 100px;
-}
+/* calculator portion */
 .calculator{
+    /* border: 1px solid green; */
     margin-top: 80px;
     /* margin-left: -250px; */
     width: 100;
@@ -313,14 +332,18 @@ nav ul{
     justify-content: space-around;
     align-items: center;
 }
-/* BMI calculator portion */
+.chart{
+        
+    /* margin-left: 120px; */
+    width: 400px;
+}
 .ttr{
     color: rgba(255, 255, 255, 0.5);
     font-size: 0.875rem;
     font-weight: 400;
 
 }
- table,td {
+table,td {
     border: 1px solid  rgba(255, 255, 255, 0.5);
     border-collapse: collapse;
   }
@@ -332,9 +355,7 @@ th, td{
     font-weight: 400;
     color: rgba(255, 255, 255, 0.5);
     margin-bottom: 30px;
-}
-.calculator-h2{
-font-weight: 900;
+    width: 400px;
 }
 .input-field{
     color: rgba(255, 255, 255, 0.37);
@@ -372,10 +393,7 @@ font-weight: 900;
     margin-bottom: 10px;
     padding-left: 10px;
 }
-.btn-calculate{
-    margin-top: 20px;
-}
-/* Meet Our Team */
+/* Meet out team portion */
 .moth1{
     color: white;
     font-size: 3rem;
@@ -421,7 +439,7 @@ font-weight: 900;
     padding-top: 30px;
     border-radius: 18px;
 }
-/* Footer portion */
+/* footer */
 .footer{
     margin-top: 88px;
     width: 100%;
@@ -437,6 +455,7 @@ font-weight: 900;
     margin: 0 auto;
     display: flex;
     justify-content: space-around;
+    /* width: 400px; */
 }
 footer ul li{
     list-style-type: none;
@@ -446,69 +465,231 @@ footer ul li{
     margin-top: 20px;
 }
 .hr{
-    width: 1550px;
+    max-width: 1440px;
     margin: 0 auto;
     margin-top: 30px;
+    background-color: rgba(197, 195, 195, 0.5) ;
+    /* border-top: 1px solid  rgba(255, 255, 255, 0.5); */
 }
 .all-right{
     margin-top: 30px;
     text-align: center;
-    color:  rgba(255, 255, 255, 0.5);
-    
+    color:  rgba(255, 255, 255, 0.5);  
 }
+.footer-h6{
+    width: 300px;
+}
+/* hr{
+    border: 0;
+    border-top: 1px solid  rgba(255, 255, 255, 0.5);
+} */
 
 
-/* Responsive part */
-@media screen and (max-width:576px){
-     .section-body{
-        flex-direction: column;
-    }
 
-    /* navbar-related work */
-    .navbar{
-        margin-left: -50px;
-    }
-    #navul{
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width:576px) {
+    /* nav and banner related style */
+     #navul{
         display: none;
     }
-    #bar{
-        display: inline;
+    .body-btn{
+        width:150px
+    } 
+    .section-body{
+        flex-direction: column;
     }
-    /* section-body related work */
-    .trainer1{
-        margin-left: 250px;
-        width: 100%;
+    #menu-icon{
+        display: block;
+        color: white;
+        font-size: 2rem;
+        position: relative;
+        top: 40px;
+
+    }
+    /* banner portion */
+    .get-body{
+        font-size: 2.25rem;
+        width: 353px;
+    }
+    #GBP{
+        flex-direction: column;
     }
     .TP1{
-        margin-left: 200px;
+        height: 72.58px;
+        width: 160.74px;
+        align-items: center;
+        border-radius: 12px;
+        position: relative;
+        bottom: 320px;
+        right: 0px;
+        padding: 0px;
+        background-color:rgba(48, 48, 48, 0.54) ;
+        backdrop-filter: blur(30px);
+        font-size: 0.875rem;
+        gap: 10px;
+        
+    }
+    .text1-1{
+        font-size: 0.5625rem;
     }
     .TP2{
-        margin-left: 460px;
-        margin-top: -470px;
+        height: 72.58px;
+        width: 160.74px;
+        align-items: center;
+        border-radius: 12px;
+        position: relative;
+        bottom: 600px;
+        right: 10px;
+        background-color:rgba(48, 48, 48, 0.54) ;
+        backdrop-filter: blur(30px);
+        font-size:1.8rem;
+        
     }
-
-    .section-body{
-       margin-left: 55px;
-       width: 100%;
+    .text3{
+        font-size: 0.5625rem;
     }
-
-
-    /* Change Your habit related portion */
+/* Change your habit portion */
+    .cyh{
+        margin-top: -190px;
+    }
+    .para{
+        width: 318px;
+        font-size: 2rem;
+    }
+    #big-para{
+        font-size: 2rem;
+        padding-bottom: 5px;
+    }
     .images4{
-        /* margin-top: 500px; */
+        margin-top: 100px;
+        flex-direction: column;
+        align-items: center;
+        /* transform: scale(1.2); */
+        width: auto;
+       
+    }
+    /* Run an extra mile */
+    .rme-p{
+        width: 300px;
+    }
+    .rme{
+       margin-top: 20px;
+        flex-direction: column;
+        height: auto;
+    }
+    #btn-join-now{
+       height: 54px;
+       width: 287px;
+    }
+    .h1-p{
+        width: 287px;
+        height: 264px;
+    }
+    .runner{
+       margin-right: 3px;
+      /* transform: scale(1); */
+      margin-bottom: 15px;
+      height: auto;
+      width: auto;
+      margin-left: 15px;
+      margin-right: 15px;
+      margin-top: -20px;
+    }
+    /* BMI calculator portion */
+    .bmi-text-body{
+        margin-top: 10px;
+    }
+    .calculator{
+        flex-direction: column;
+        align-items: center;
+        margin-top: 10px;
+        padding-bottom: 15px;
+    }
+    .input-field{
+        max-width: 170px;
+    }
+    .input-field-select{
+        max-width: 185px;
+
+    }
+    .input-field-big{
+        max-width: 375px;
+    }
+    .calculator{
+       height: auto;
+       align-items: center;
+       
+    }
+    #chart{
+        justify-content: center;
+        align-items: center;
+        
+       /* margin-right: -100px; */
+    }
+    .calculator-p{
+        width: 300px;
+    }
+/*    Meet Our team portion */
+    .moth1{
+        margin-top: 20px;
+    }
+    .motp{
+        margin-top: -10px !important;
+    }
+    .hexa-image-section{
+        width: auto;
+        height: auto;
+    }
+    .image-box-1{
         flex-direction: column;
         align-items: center;
     }
-    .cyh{
-        margin-top: 450px;
+    .footer{
+        height: auto;
+        width: auto;
+        border: 1 px solid white;
     }
-    .image-circle{
-        margin-left: 65px;
-    }
-    /* Run an extra mile related portion */
-    .rme{
-        margin-top: 800px;
+    .footer-1st-div{
         flex-direction: column;
-    }
-}
 
+    }
+    .all-right{
+        padding-top: 0px;
+    }
+    .get-started{
+        padding-left: 5px;
+    }
+    .footer-1st-div{
+        padding: 10px;
+        height: auto;
+    }
+    #GT1{
+        margin-top: -150px;
+    }
+    #GT2{
+        margin-top: -20px;
+    }
+    
+    .footer-h6{
+        width: 317px;
+        height: 200px;
+
+        font-size: 0.875rem;
+    }
+    
+}
